--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <div class="main">
       <h1>Sounds of Mumbra: Unveiling the Beat</h1>
       <p>"Sounds of Mumbra: Unveiling the Beat" is a musical journey that captures the essence and rhythm of this vibrant city. From the bustling streets to the tranquil shores, this song takes you on a sonic voyage through Mumbra's diverse soundscape. With its pulsating beats and soulful melodies, it's a tribute to the culture, energy, and spirit of Mumbra. Get ready to groove to the heartbeat of this incredible place as you embark on a musical adventure like no other. Let the music of Mumbra sweep you off your feet and into its captivating world.</p>
-      <img src="/boy.png" alt="">
+      <img src="boy.png" alt="">
       <audio id="audio" src="elvishbhai.mp3" type="audio/mpeg"></audio>
       <button onclick="play()">Play Now</button>
     </div>
